--- a/public/stylings/auth/register.css
+++ b/public/stylings/auth/register.css
@@ -6,34 +6,42 @@
 
 body,
 html {
+  margin: 0;
+  padding: 0;
   height: 100%;
-  padding: 40px 0;
-  background-color: #101010;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
   font-family: 'poppins', Sans-Serif;
   /* Prevents any scrolling issues */
+  box-sizing: border-box;
+  background-color: #101010;
 }
 
 .container {
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
   height: 100vh;
+}
+
+.flexbox {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 .auth-container {
-  justify-content: center;
   text-align: center;
   flex-direction: column;
   width: 85%;
   padding: 30px 30px;
   border: 1px solid whitesmoke;
+  background-color: #181818;
   border-radius: 10px;
   color: white;
-  background-color: #181818;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 2)
+  box-shadow: 0 0 10px rgba(0, 0, 0, 2);
 }
 
 .auth-container h1 {
